--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Public Holiday, N/A
+ATTENTION: Could not find meal id for 2025-02-27!!!
+2025-02-21, Korean Fried Chicken Rice Bowl, Haak Eatery, L14
