--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-02-27!!!
-2025-02-21, Korean Fried Chicken Rice Bowl, Haak Eatery, L14
+ATTENTION: Could not find meal id for 2025-02-28!!!
+Could not find meal id, N/A
