--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-01!!!
-Could not find meal id, N/A
+ATTENTION: Could not find meal id for 2025-03-02!!!
+2025-02-24, Grilled Pork Chop with Rice, Chao Catering, L14
