--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-02!!!
-2025-02-24, Grilled Pork Chop with Rice, Chao Catering, L14
+ATTENTION: Could not find meal id for 2025-03-03!!!
+2025-02-25, Teriyaki Chicken Bento Box, Sushi Jones, L14
