--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-04!!!
-2025-02-26, No selection, None, None
+ATTENTION: Could not find meal id for 2025-03-05!!!
+2025-02-27, Pita Pocket, Sabbaba, L20
