--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-09!!!
-2025-03-03, Mee Goreng, Ipoh Town, L20
+ATTENTION: Could not find meal id for 2025-03-10!!!
+2025-03-04, Beef Rendang with Rice, Malacca Straits on Broadway, L14
