--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-10!!!
-2025-03-04, Beef Rendang with Rice, Malacca Straits on Broadway, L14
+ATTENTION: Could not find meal id for 2025-03-11!!!
+2025-03-05, No selection, None, None
