--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-12!!!
-2025-03-06, Individual - Teriyaki Beef & Asian Greens Salad with Sesame Citrus Dressing, The Catering Department , L20
+ATTENTION: Could not find meal id for 2025-03-13!!!
+2025-03-07, L Curry, Yume Sushi, L14
