--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-13!!!
-2025-03-07, L Curry, Yume Sushi, L14
+ATTENTION: Could not find meal id for 2025-03-14!!!
+Public Holiday/Weekend, N/A
