--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-14!!!
-Public Holiday/Weekend, N/A
+ATTENTION: Could not find meal id for 2025-03-15!!!
+Could not find meal id, N/A
