--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-18!!!
-2025-03-12, No selection, None, None
+ATTENTION: Could not find meal id for 2025-03-19!!!
+2025-03-13, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
