--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-19!!!
-2025-03-13, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
+ATTENTION: Could not find meal id for 2025-03-20!!!
+2025-03-14, Malaysian Curry Chicken Rice 马来咖哩鸡肉饭, Chefs Gallery, L14
