--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-24!!!
-2025-03-18, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
+ATTENTION: Could not find meal id for 2025-03-25!!!
+2025-03-19, No selection, None, None
