--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-25!!!
-2025-03-19, No selection, None, None
+ATTENTION: Could not find meal id for 2025-03-26!!!
+2025-03-20, Sweet & Sour Chicken, Malacca Straits on Broadway, L14
