--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-03-26!!!
-2025-03-20, Sweet & Sour Chicken, Malacca Straits on Broadway, L14
+ATTENTION: Could not find meal id for 2025-03-27!!!
+Public Holiday/Weekend, N/A
