--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-03!!!
-2025-03-31, Chicken Shawarma Pita, Sabbaba, L14
+ATTENTION: Could not find meal id for 2025-04-04!!!
+2025-04-01, Beef Shawarma Plate, Beirut Falafel, L20
