--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-04!!!
-2025-04-01, Beef Shawarma Plate, Beirut Falafel, L20
+ATTENTION: Could not find meal id for 2025-04-05!!!
+2025-04-02, No selection, None, None
