--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-05!!!
-2025-04-02, No selection, None, None
+ATTENTION: Could not find meal id for 2025-04-06!!!
+2025-04-03, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
