--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-10!!!
-2025-04-07, Chicken Shawarma Pita, Sabbaba, L14
+ATTENTION: Could not find meal id for 2025-04-11!!!
+2025-04-08, Cancun - Pita Pocket, Sabbaba, L20
