--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-13!!!
-2025-04-10, Vietnamese Combo Pack, Scoota Cafe, L14
+ATTENTION: Book lunch for 2025-04-14!!!
+2025-04-11, Hainan Chicken Rice, Malacca Straits on Broadway, L14
