--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Book lunch for 2025-04-16!!!
-Could not find meal id, N/A
+ATTENTION: Could not find meal id for 2025-04-17!!!
+2025-04-14, Unbooked, N/A, N/A
