--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-20!!!
-2025-04-17, Unbooked, N/A, N/A
+ATTENTION: Could not find meal id for 2025-04-21!!!
+Could not find meal id, N/A
