--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-24!!!
-Could not find meal id, N/A
+ATTENTION: Could not find meal id for 2025-04-25!!!
+2025-04-22, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
