--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-25!!!
-2025-04-22, Sweet Potato Noodles & Beef Stir Fry Japchae, Haak Eatery, L14
+ATTENTION: Could not find meal id for 2025-04-26!!!
+2025-04-23, No selection, None, None
