--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-26!!!
-2025-04-23, No selection, None, None
+ATTENTION: Could not find meal id for 2025-04-27!!!
+2025-04-24, L Slow Cooked Lamb Sandwich, "Tinys Sandwich Bar", L14
