--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-04-30!!!
-Could not find meal id, N/A
+ATTENTION: Could not find meal id for 2025-05-01!!!
+2025-04-28, Unbooked, N/A, N/A
