--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-05-02!!!
-2025-04-29, Lemongrass Beef Banh Mi Vietnamese Baguette, Planet Roll, L14
+ATTENTION: Could not find meal id for 2025-05-03!!!
+2025-04-30, No selection, None, None
