--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-ATTENTION: Could not find meal id for 2025-05-05!!!
-2025-05-02, Vegetable & Egg Fried Rice 翡翠素杂锦鸡蛋炒饭, Chefs Gallery, L14
+ATTENTION: Could not find meal id for 2025-05-06!!!
+Could not find meal id, N/A
